# memobench

./: .gitignore  Cargo.toml  LICENSE  README.md
bridge/: pom.xml
bridge/src/main/java/pt/inesctec/memobench/: BridgeRule.java  CalciteBridge.java
bridge/src/main/resources/: log4j.properties
src/: exporm.rs  generator.rs  icalcite.rs  incalcite.rs  inmem.rs  inorm.rs  inredis.rs  inull.rs  ioptddb.rs  ioptdmem.rs  ioptdorig.rs  iredis.rs  main.rs  null.rs
