[package]
name = "memobench"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.22", features = ["kv"] }
env_logger = { version = "0.11.5", features = ["default"] }
tokio = { version = "1.41", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
hdrhistogram = "7.5.4"

optd-core = { path = "../optd/optd-core", optional = true }

optd-original = { package = "optd-core", path = "../optd-original/optd-core", optional = true }

redis = { version = "0.27.5", optional = true }
serde_json = { version = "1.0.132", optional = true }

[features]
optd = ["dep:optd-core"]
optd-original = ["dep:optd-original"]
redis = ["dep:redis", "dep:serde_json"]