[package]
name = "memobench"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.22", features = ["kv"] }
env_logger = { version = "0.11.5", features = ["default"] }
tokio = { version = "1.41", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
hdrhistogram = "7.5.4"

optd-db = { package = "optd-core", git = "https://github.com/cmu-db/optd.git", rev="8056a4bf8909008a8b70206338dd2eb6ffd910bd", optional = true }

optd-original = { package = "optd-core", git = "https://github.com/cmu-db/optd-original.git", optional = true }

redis = { version = "0.27.5", optional = true }
serde_json = { version = "1.0.132", optional = true }

j4rs = { version = "0.22.0", optional = true }

[features]
optd_db = ["dep:optd-db"]
optd_original = ["dep:optd-original"]
redis = ["dep:redis", "dep:serde_json"]
calcite = ["dep:j4rs"]